[package]
authors = ["Matthias Krüger <matthias.krueger@famsik.de>"]
edition = "2021"
license = "MIT/Apache-2.0"
name = "icemaker"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# 여기가 rust dependency 적어두는 곳, 참조할 모듈들, 코드들은 여기 적어둔다.
# rust에서 직접 접근 가능한 경우 버전과 옵션을 적어주지만, github 등에 있는 코드는 주소를 직접 접어줘야한다.
# tree-sitter 
[dependencies]
chrono = {version = "0.4.31", default-features = false, features = ["alloc", "std", "clock"]}
clap = {version = "4.0.4", features = ["derive"]}
colored = "2.0.0"
ctrlc = "3.2.1"
diff = "0.1"
home = "0.5.3"
itertools = "0.11"
lazy_static = "1.4"
markov = "1.1"
once_cell = "1.13"
rand = "0.8"
rayon = "1.5.0"
regex = "1.5"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sha2 = "0.10"
tempdir = "0.3"
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-splicer = "0.5.0"
walkdir = "2.3.1"

[profile.release]
#inherits="release"
codegen-units = 1
debug = false
incremental = false
lto = "thin"

[features]
# run without prlimit
ci = []

#faster compile with not as good performance (more cgus) for manual testing
[profile.fast]
codegen-units = 4
debug = false
incremental = false
inherits = "release"
lto = "thin"
